make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="banner">
       <h1>Hi, I'm Kat 🚀</h1>
       <div id="profile-picture"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <p>Experienced product manager with a demonstrated history of working in the technology and L&D services industry</p>
       <p><a href="https://github.com/katsuu" target="_blank" class="btn-purple">Discover My Github</a></p>
     </div>
 
